config service added

--- a/course-service/src/main/resources/application.properties
+++ b/course-service/src/main/resources/application.properties
@@ -18,15 +18,13 @@ server.error.include-stacktrace=never
 server.error.include-message=always
 
 # Configure Port
-server.port=8050
-#spring.application.name=course-service
+#server.port=8050
+spring.application.name=course-service
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:8081
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operations-sorter=alpha
 
 
-#Eureka client
-#spring.cloud.compatibility-verifier.enabled=false
-#spring.application.name=course-service
-#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
