--- a/director-service/src/main/resources/application.properties
+++ b/director-service/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.error.include-stacktrace=never
 server.error.include-message=always
 
 # Configure Port
-server.port=8040
+#server.port=8040
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -28,3 +28,5 @@ springdoc.swagger-ui.operations-sorter=alpha
 #spring.main.allow-bean-definition-overriding=true
 
 spring.application.name=director-service
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:8081
