--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -4,4 +4,13 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 server.port=8080
 spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.routes=[{id=director-service, uri=lb://director-service, predicates=[Path=/api/v1/principals/**]}, {id=course-service, uri=lb://course-service, predicates=[Path=/api/v1/courses/**]}]
+
+spring.cloud.gateway.routes[0].id=director-service
+spring.cloud.gateway.routes[0].uri=lb://director-service
+spring.cloud.gateway.routes[0].predicates=Path=/api/v1/principals/**
+
+spring.cloud.gateway.routes[1].id=course-service
+spring.cloud.gateway.routes[1].uri=lb://course-service
+spring.cloud.gateway.routes[1].predicates=Path=/api/v1/courses/**
+
+#spring.cloud.gateway.routes=[{id=director-service, uri=lb://director-service, predicates=[Path=/api/v1/principals/**]},{id=course-service, uri=lb://course-service, predicates=[Path=/api/v1/courses/**]}]
