--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.cloud.config.server.git.default-label= develop
+spring.cloud.config.server.git.default-label= config-service
 spring.cloud.config.server.git.uri= https://github.com/Asimov-TotemCrew-202202/asimov-microservices
 spring.cloud.config.server.git.search-paths= config-data
 
