--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -7,7 +7,7 @@ spring.cloud.gateway.discovery.locator.enabled=true
 
 spring.cloud.gateway.routes[0].id=director-service
 spring.cloud.gateway.routes[0].uri=lb://director-service
-spring.cloud.gateway.routes[0].predicates=Path=/api/v1/principals/**, /api/v1/teachers/**, /api/v1/statements/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/principals/**, /api/v1/teachers/**, /api/v1/statements/**
 #spring.cloud.gateway.routes[0].predicates[1]=Path=/api/v1/teachers/**
 #spring.cloud.gateway.routes[0].predicates[2]=Path=/api/v1/statements/**
 
