--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -8,15 +8,19 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.routes[0].id=director-service
 spring.cloud.gateway.routes[0].uri=lb://director-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/principals/**, /api/v1/teachers/**, /api/v1/statements/**
-spring.cloud.gateway.routes[0].predicates[1]=Method=GET, POST, PUT, DELETE
+#spring.cloud.gateway.routes[0].predicates[1]=Method=GET, POST, PUT, DELETE
 #spring.cloud.gateway.routes[0].predicates[1]=Path=/api/v1/teachers/**
 #spring.cloud.gateway.routes[0].predicates[2]=Path=/api/v1/statements/**
 
 spring.cloud.gateway.routes[1].id=course-service
 spring.cloud.gateway.routes[1].uri=lb://course-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/courses/**, /api/v1/competences/**, Path=/api/v1/topics/**
-spring.cloud.gateway.routes[1].predicates[1]=Method=GET, POST, PUT, DELETE
+#spring.cloud.gateway.routes[1].predicates[1]=Method=GET, POST, PUT, DELETE
 #spring.cloud.gateway.routes[1].predicates[1]=Path=/api/v1/competences/**
 #spring.cloud.gateway.routes[1].predicates[2]=Path=/api/v1/topics/**
 
 #spring.cloud.gateway.routes=[{id=director-service, uri=lb://director-service, predicates=[Path=/api/v1/principals/**]},{id=course-service, uri=lb://course-service, predicates=[Path=/api/v1/courses/**]}]
+
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET, POST, PUT, DELETE
