--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -14,7 +14,7 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/principals/**, /api/v1
 
 spring.cloud.gateway.routes[1].id=course-service
 spring.cloud.gateway.routes[1].uri=lb://course-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/courses/**, /api/v1/competences/**, Path=/api/v1/topics/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/courses/**, /api/v1/competences/**, /api/v1/topics/**
 #spring.cloud.gateway.routes[1].predicates[1]=Method=GET, POST, PUT, DELETE
 #spring.cloud.gateway.routes[1].predicates[1]=Path=/api/v1/competences/**
 #spring.cloud.gateway.routes[1].predicates[2]=Path=/api/v1/topics/**
