--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -17,6 +17,10 @@ spring.cloud.gateway.routes[2].id=student-service
 spring.cloud.gateway.routes[2].uri=lb://student-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/grades/**, /api/v1/sections/**, /api/v1/students/**
 
+spring.cloud.gateway.routes[3].id=auth-service
+spring.cloud.gateway.routes[3].uri=lb://auth-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/auth/**, /api/v1/test/**
+
 
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
