--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -19,7 +19,7 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/grades/**, /api/v1/sec
 
 spring.cloud.gateway.routes[3].id=auth-service
 spring.cloud.gateway.routes[3].uri=lb://auth-service
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/auth/**, /api/v1/test/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/auth/**, /api/v1/test/**, /api/v1/users/**
 
 
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
