--- a/spring-security-jwt-authentication/src/main/resources/application.properties
+++ b/spring-security-jwt-authentication/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/asimov_security?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= Ingsoftware468
+spring.datasource.url= jdbc:mysql://asimovdatabase.mysql.database.azure.com:3306/asimov_security
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
