feat: endpoint to api-gateway

--- a/spring-security-jwt-authentication/src/main/resources/application.properties
+++ b/spring-security-jwt-authentication/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/asimov_security?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= Ingsoftware468
+spring.datasource.password= o9L2TtFd
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
