--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -11,7 +11,7 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/principals/**, /api/v1
 
 spring.cloud.gateway.routes[1].id=course-service
 spring.cloud.gateway.routes[1].uri=lb://course-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/courses/**, /api/v1/competences/**, /api/v1/topics/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/courses/**, /api/v1/competences/**, /api/v1/topics/**, /api/v1/exams/**
 
 spring.cloud.gateway.routes[2].id=student-service
 spring.cloud.gateway.routes[2].uri=lb://student-service
