--- a/course-service/src/main/resources/application.properties
+++ b/course-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://3.88.199.241:3306/asimov_courses?allowPublicKeyRetrieval=true&useSSL=true&serverTimezone=UTC&useLegacyDateTimeCode=false
 spring.datasource.url=jdbc:mysql://localhost:3306/asimov_courses
 spring.datasource.username=root
-spring.datasource.password=Ingsoftware468
+spring.datasource.password=o9L2TtFd
 #spring.jpa.show-sql=false
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
