--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -15,7 +15,7 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/courses/**, /api/v1/co
 
 spring.cloud.gateway.routes[2].id=student-service
 spring.cloud.gateway.routes[2].uri=lb://student-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/grades/**, /api/v1/sections/**, /api/v1/students/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/grades/**, /api/v1/sections/**, /api/v1/students/**, /api/v1/alternatives/**
 
 spring.cloud.gateway.routes[3].id=auth-service
 spring.cloud.gateway.routes[3].uri=lb://auth-service
