--- a/director-service/src/main/resources/application.properties
+++ b/director-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DataSource Configuration Properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://asimovdatabase.mysql.database.azure.com:3306/asimov_directors
+spring.datasource.url=jdbc:mysql://localhost:3306/asimov_directors
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=o9L2TtFd
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
