--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # DataSource Configuration Properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://3.88.199.241:3306/asimov_students?allowPublicKeyRetrieval=true&useSSL=true&serverTimezone=UTC&useLegacyDateTimeCode=false
-spring.datasource.url=jdbc:mysql://asimovdatabase.mysql.database.azure.com:3306/asimov_students
+spring.datasource.url=jdbc:mysql://localhost:3306/asimov_students
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=o9L2TtFd
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
