--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -1,6 +1,6 @@
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://config-service-asimov.eastus.cloudapp.azure.com:8761/eureka
 eureka.instance.hostname=localhost
 server.port=8080
 spring.cloud.gateway.discovery.locator.enabled=true
