--- a/config-data/course-service.properties
+++ b/config-data/course-service.properties
@@ -1,6 +1,6 @@
-server.port: ${PORT:${SERVER_PORT:0}}
+server.port: 8040
 
 eureka.client.fetch-registry: true
 eureka.client.register-with-eureka: true
-eureka.client.service-url.default-zone: http://localhost:8761/eureka
+eureka.client.service-url.default-zone: http://config-service-asimov.eastus.cloudapp.azure.com:8761/eureka
 eureka.instance.instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
