--- a/config-data/student-service.properties
+++ b/config-data/student-service.properties
@@ -1,4 +1,4 @@
-server.port: ${PORT:${SERVER_PORT:0}}
+server.port: 8030
 
 eureka.client.fetch-registry: true
 eureka.client.register-with-eureka: true
