--- a/director-service/src/main/resources/bootstrap.properties
+++ b/director-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name=director-service
 spring.cloud.config.enabled=true
-spring.cloud.config.uri=http://localhost:8081
+spring.cloud.config.uri=http://config-service-asimov.eastus.cloudapp.azure.com:8081
