--- a/spring-security-jwt-authentication/src/main/resources/bootstrap.properties
+++ b/spring-security-jwt-authentication/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.application.name=auth-service
 spring.cloud.config.enabled=true
-spring.cloud.config.uri=http://localhost:8081
+spring.cloud.config.uri=http://config-service-asimov.eastus.cloudapp.azure.com:8081
 
 # App Properties
 app.jwtSecret= asimovSecretKey
