--- a/config-data/auth-service.properties
+++ b/config-data/auth-service.properties
@@ -2,5 +2,7 @@ server.port: 8010
 
 eureka.client.fetch-registry: true
 eureka.client.register-with-eureka: true
-eureka.client.service-url.default-zone: http://eureka-service.eastus.cloudapp.azure.com:8761/eureka
-eureka.instance.instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+spring.application.name=auth-service
+eureka.client.service-url.defaultZone=http://eureka-service.eastus.cloudapp.azure.com:8761
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=auth-service
