--- a/config-data/auth-service.properties
+++ b/config-data/auth-service.properties
@@ -5,4 +5,5 @@ eureka.client.register-with-eureka: true
 spring.application.name=auth-service
 eureka.client.service-url.defaultZone=http://eureka-service.eastus.cloudapp.azure.com:8761
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=auth-service
+eureka.instance.instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
