--- a/config-data/auth-service.properties
+++ b/config-data/auth-service.properties
@@ -3,7 +3,7 @@ server.port: 8010
 eureka.client.fetch-registry: true
 eureka.client.register-with-eureka: true
 spring.application.name=auth-service
-eureka.client.service-url.defaultZone=http://eureka-service.eastus.cloudapp.azure.com:8761
+eureka.client.service-url.defaultZone=http://eureka-service.eastus.cloudapp.azure.com:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
