--- a/config-data/director-service.properties
+++ b/config-data/director-service.properties
@@ -2,5 +2,7 @@ server.port: 8020
 
 eureka.client.fetch-registry: true
 eureka.client.register-with-eureka: true
+spring.application.name=director-service
 eureka.client.service-url.default-zone: http://eureka-service.eastus.cloudapp.azure.com:8761/eureka
+eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
