--- a/config-data/api-gateway.properties
+++ b/config-data/api-gateway.properties
@@ -1,7 +1,7 @@
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 spring.application.name=api-gateway
-eureka.client.service-url.default-zone=http://eureka-service.eastus.cloudapp.azure.com:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-service.eastus.cloudapp.azure.com:8761/eureka
 eureka.instance.hostname=eureka-service.eastus.cloudapp.azure.com
 eureka.instance.prefer-ip-address=true
 server.port=8080
